@@ -20,4 +20,17 @@
   [[org.clojure/clojure "1.12.0"]
    [io.velio/collet-app "0.2.4"]
    [nrepl/bencode "1.1.0"]
-   [djblue/portal "0.58.2"]])
+   [djblue/portal "0.58.2"]]
+
+  :jvm-opts
+  ["--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED"
+   "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+   "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+   "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
+   "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED"
+   "--add-opens=java.base/java.lang=ALL-UNNAMED"
+   "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+   "--add-opens=java.base/java.io=ALL-UNNAMED"
+   "--add-opens=java.base/java.util=ALL-UNNAMED"
+   "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"
+   "--enable-native-access=ALL-UNNAMED"])
